src/kubernetes/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-backend
  namespace: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-backend
  template:
    metadata:
      labels:
        app: blog-backend
    spec:
      containers:
        - name: blog-backend
          image: $BACKEND_IMAGE
          ports:
            - containerPort: 80
          volumeMounts:
            - name: blog-volume
              mountPath: /posts
      volumes:
        - name: blog-volume
          persistentVolumeClaim:
            claimName: blog-pvc
      imagePullSecrets:
        - name: registry-credit
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-frontend
  namespace: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-frontend
  template:
    metadata:
      labels:
        app: blog-frontend
    spec:
      containers:
        - name: blog-frontend
          image: $FRONTEND_IMAGE
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: registry-credit
---
apiVersion: v1
kind: Service
metadata:
  name: blog-backend
  namespace: blog
spec:
  selector:
    app: blog-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blog-frontend
  namespace: blog
spec:
  selector:
    app: blog-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog
  namespace: blog
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: blog-blog-redirectscheme@kubernetescrd
spec:
  rules:
    - host: unknownpgr.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: blog-backend
                port:
                  number: 80
    - host: www.unknownpgr.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: blog-backend
                port:
                  number: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: blog-redirectscheme
  namespace: blog
spec:
  redirectScheme:
    scheme: https
    permanent: true
